# variantpaths

./: .gitignore  Cargo.toml  LICENSE  README.md  build_vpf.py  build_vpz.py  build_windows.sh
.cargo/: config.toml
.github/workflows/: ci.yml
samples/: igh_3sample.vpf  igh_3sample.vpz
src/: heatmap.rs  main.rs  model.rs  msa.rs  render.rs  ui_topbar.rs  view.rs
src/format/: annot.rs  bbf.rs  bbz.rs  fasta.rs  mod.rs
